pkgdatadir = $(gamedatadir)/gfx/cutscene

pkgdata_DATA = adonthell_03.img adonthell_green.img jewelbag_closed.img \
	jewelbag_open.img forest1.img forest2.img forest3.img intro_bg.img \
	intro_guard.img intro_player.img intro_inn.img intro_talan.img \
	player.img gem.pnm extro_bjarn.img extro_chest.img extro_wall.img \
	extro_open_bag.img extro_closed_bag.img

EXTRA_DIST = $(pkgdata_DATA)
