pkgdatadir = $(gamedatadir)/gfx/mapcharacters

pkgdata_DATA = frostbloom.mchar player.mchar servant1.mchar silverhair.mchar orloth.mchar \
	bjarn.mchar oliver.mchar lucia.mchar servant2.mchar talan.mchar \
	erek.mchar fellnir.mchar jelom.mchar alek.mchar illig.mchar bjarn_crying.mchar \
	talan_beaten.mchar

EXTRA_DIST = $(pkgdata_DATA)
