pkgdatadir = $(gamedatadir)/scripts/dialogues

pkgdata_DATA = orloth_start.py lucia_start.py sarin_start.py \
    janesta_start.py erek_start.py oliver_start.py bjarn_start.py \
    frostbloom_start.py talan_start.py alek_start.py jelom_start.py \
    tristan_start.py

EXTRA_DIST = $(pkgdata_DATA)

