pkgdatadir = $(gamedatadir)/scripts/events

pkgdata_DATA = common_to_kitchen.py common_to_parlor.py inn_to_yard.py \
	yard_to_kitchen.py open_inn_door.py 1st_to_fellnir.py 1st_to_frostbloom.py \
	1st_to_player.py 1st_to_silverhair.py 2nd_to_illig.py 2nd_to_oliver.py \
	2nd_to_redwyne.py cellar_to_alek.py cellar_to_bath.py cellar_to_dwarfs.py \
	cellar_to_storage.py

EXTRA_DIST = $(pkgdata_DATA)
