pkgdatadir = $(gamedatadir)/gfx/mapobjects/floorings

pkgdata_DATA = woodenplanks.mobj bath-floor2b.mobj bath-floor2a.mobj \
	bath-floor1b.mobj bath-floor1a.mobj terracotta-tiles-1.mobj \
	terracotta-tiles-3.mobj terracotta-tiles-3.mobj woodenplanks_2_1.mobj \
	woodenplanks_2_2.mobj

EXTRA_DIST = $(pkgdata_DATA)
