pkgdatadir = $(gamedatadir)/gfx/mapobjects/floorings

pkgdata_DATA = woodenplanks.mobj bath-floor2b.mobj bath-floor2a.mobj \
	bath-floor1b.mobj bath-floor1a.mobj terracotta-tiles-1.mobj \
	terracotta-tiles-2.mobj terracotta-tiles-3.mobj woodenplanks_2_1.mobj \
	woodenplanks_2_2.mobj terracotta-trans.mobj \
	woodenplanks_2_trans_1.mobj woodenplanks_2_trans_2.mobj woodenplanks_trans.mobj \
	behind-window.mobj

EXTRA_DIST = $(pkgdata_DATA)
