pkgdatadir = $(gamedatadir)/gfx/mapobjects/furnitures

pkgdata_DATA = bar.mobj barrel_wooden_with-tap.mobj clock.mobj cupboard.mobj oven.mobj \
	round-table.mobj shelves_wooden_books.mobj shelves_wooden_filled.mobj \
	water-bucket.mobj bathtub.mobj shelf_bottles1.mobj shelf_bottles2.mobj \
	mug_on_table-1.mobj mug_on_table-2.mobj table_wooden_v_bot.mobj \
	table_wooden_v_mid.mobj table_wooden_v_top.mobj stool.mobj \
	bed_wooden_h.mobj bed_wooden_v.mobj bed.mobj table_alchemy_h.mobj \
	draws_wooden.mobj noble_bed.mobj silverhair_cupboard.mobj \
	silverhair_basin.mobj silverhair_chest.mobj stone_bed.mobj stone_v.mobj \
	crate.mobj barrel_wooden.mobj crate2.mobj barrel_wooden2.mobj dwarf_chest.mobj \
	normal-cupboard.mobj chest-wooden.mobj silverhair_rug-1.mobj silverhair_rug-2.mobj \
	silverhair_rug-3.mobj silverhair_rug-4.mobj stove.mobj barn_loft_clutter.mobj

EXTRA_DIST = $(pkgdata_DATA)
