pkgdatadir = $(gamedatadir)/gfx/mapobjects/stairs

pkgdata_DATA = red-carpet_bl-tr.mobj red-carpet_br-tl.mobj \
	red-carpet_tr-bl.mobj red-carpet_tl-br.mobj \
	red-carpet-front_bl-tr.mobj red-carpet-front_back.mobj \
	red-carpet-front_br-tl.mobj red-carpet-front_tl-br.mobj \
	red-carpet-front_tr-bl.mobj

EXTRA_DIST = $(pkgdata_DATA)
