pkgdatadir = $(gamedatadir)/gfx/mapobjects/stairs

pkgdata_DATA = red-carpet_bl-tr.mobj red-carpet_br-tl.mobj \
	red-carpet_tr-bl.mobj red-carpet_tl-br.mobj \
	red-carpet-front_bl-tr.mobj red-carpet-front_back.mobj \
	red-carpet-front_br-tl.mobj red-carpet-front_tl-br.mobj \
	red-carpet-front_tr-bl.mobj barn_ground-cellar.mobj \
	barn_ground-loft.mobj barn_loft_ground.mobj barn_loft-ground.mobj

EXTRA_DIST = $(pkgdata_DATA)
