pkgdatadir = $(gamedatadir)/gfx/mapobjects/terrains

pkgdata_DATA = grass1.mobj grass2.mobj ground-stone-1.mobj ground-stone2.mobj \
	hay-bot.mobj hay.mobj stoneflower.mobj stone_ground.mobj tree_ground.mobj \
	road_sandy.mobj road_sandy_to_grass_bot.mobj road_sandy_to_grass_top.mobj \
	road_sandy_to_grass_left.mobj road_sandy_to_grass_right.mobj \
	road_to_stone_bot-left.mobj road_to_stone_left.mobj grass_medium-height_front.mobj \
	grass_medium-height.mobj forest_bot.mobj forest_bot_leaves.mobj forest_left.mobj \
	forest_left_leaves.mobj

EXTRA_DIST = $(pkgdata_DATA)
