SUBDIRS = inside stone cellar

pkgdatadir = $(gamedatadir)/gfx/mapobjects/walls

pkgdata_DATA = painting1.mobj painting2.mobj painting3.mobj \
	window_right.mobj window_left.mobj window_front.mobj \
	window_round_front.mobj window_back.mobj barn_back.mobj \
	barn_loft_main.mobj barn_loft_main_top.mobj barn_ground_back_top.mobj

EXTRA_DIST = $(pkgdata_DATA)
