pkgdatadir = $(gamedatadir)/gfx/mapobjects/houses/redwyne-inn

pkgdata_DATA = barn.mobj barnroof.mobj entrance.mobj entrance-top-fore.mobj \
	entrance-top.mobj gatepost.mobj leftwing.mobj mainleft.mobj \
	mainleft-top.mobj main-ltop.mobj main.mobj mainright.mobj \
	mainright-top.mobj mainroof.mobj main-rtop.mobj

EXTRA_DIST = $(pkgdata_DATA)
