pkgdatadir = $(gamedatadir)/gfx/mapobjects/houses/redwyne-inn

pkgdata_DATA = barn.mobj barnroof.mobj entrance.mobj entrance-top-fore.mobj \
	entrance-top.mobj gatepost.mobj inn_leftwing.mobj inn_mainwing_left.mobj \
	inn_mainwing_mid.mobj inn_mainwing_right.mobj \
	mainleft-top.mobj main-ltop.mobj inn_door.mobj \
	mainright-top.mobj inn_mainwing_roof.mobj main-rtop.mobj

EXTRA_DIST = $(pkgdata_DATA)
