pkgdatadir = $(gamedatadir)/gfx/mapobjects/houses/redwyne-inn

pkgdata_DATA = barn.mobj barnroof.mobj entrance.mobj entrance-top-fore.mobj \
	entrance-top.mobj gatepost.mobj inn_leftwing.mobj inn_mainwing_left_bot.mobj \
	inn_mainwing_left_top.mobj inn_mainwing_mid_bot.mobj inn_mainwing_mid_top.mobj \
	inn_mainwing_right_top.mobj inn_mainwing_right_bot.mobj \
	mainleft-top.mobj main-ltop.mobj inn_door.mobj \
	mainright-top.mobj inn_mainwing_roof.mobj main-rtop.mobj guardhouse_entrance.mobj \
	guardhouse_main.mobj

EXTRA_DIST = $(pkgdata_DATA)
