pkgdatadir = $(gamedatadir)/gfx/mapobjects/walls/cellar

pkgdata_DATA = cellar-bl-lb.mobj cellar-bl-rf.mobj cellar-br-ib.mobj cellar-br-if.mobj \
	cellar-br-lf.mobj cellar-br-rb.mobj cellar-column-b.mobj cellar-column-f.mobj \
	cellar-doorframe-b.mobj cellar-doorframe-b-top.mobj cellar-doorframe-f.mobj \
	cellar-h-b.mobj cellar-h-f.mobj cellar-tl-lf.mobj cellar-tl-rb.mobj \
	cellar-tr-ib.mobj cellar-tr-if.mobj cellar-tr-lb.mobj cellar-tr-rf.mobj \
	cellar-v-l.mobj cellar-v-r.mobj

EXTRA_DIST = $(pkgdata_DATA)
