pkgdatadir = $(gamedatadir)/gfx/mapobjects/walls/inside

pkgdata_DATA = doorframe-back.mobj doorframe.mobj wall-bl1.mobj \
	wall-bl2-back.mobj wall-bl2.mobj wall-br1.mobj wall-br2-back.mobj \
	wall-br2.mobj wall-face-back.mobj wall-face-front.mobj \
	wall-tl1-back.mobj wall-tl2.back.mobj wall-tl2.mobj wall-tr1-back.mobj \
	wall-tr2.back.mobj wall-tr2.mobj wall-v-l.mobj wall-v-r.mobj

EXTRA_DIST = $(pkgdata_DATA)
